BB-8137: popup has incorrect position after change portrait/landscape mode - Fixed bug on iOS

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/ui/dialog.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/ui/dialog.scss
@@ -105,6 +105,8 @@
     .ui-dialog-buttonpane {
         padding: $dialog-buttonpane-offset-inner;
 
+        overflow: visible;
+
         .pull-right .action-wrapper {
             margin-left: $dialog-action-wrapper-side-offset;
         }
